--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,28 @@
     <title>Birth Date Palindrome Checker</title>
 </head>
 <body>
+    <div class="container">
+        <h1>Birthdate Palindrome Checker</h1>
+        <img src="/public/pali.gif" alt="">
+        <br>
+        <br>
+        <input type="date" id="#bdate" /> 
+        <br>
+        <br>
+        <br>
+        <button id="#Checker">check</button>
+        <div id='#result'class="result">Hi there, enter your birth date</div>
+    </div>
+    <footer>
+        <h3>
+          Made by
+          <a href="https://akhilvenkateshpillai.vercel.app/" target="_blank">
+            Akhil
+          </a>
+         
 
-    <input type="date" id="#bdate" /> 
-    <button id="#Checker">check</button>
-    <div id='#result'></div>
+        </h3>
+      </footer>
 
     <script src="/src/palindrome.js"> </script>
     
