--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <h1>Birthdate Palindrome Checker</h1>
-        <img src="/public/pali.gif" alt="">
+        <img src="./pali.gif" alt="">
         <br>
         <br>
         <input type="date" id="#bdate" /> 
@@ -18,7 +18,7 @@
         <br>
         <br>
         <button id="#Checker">check</button>
-        <div id='#result'class="result">Hi there, enter your birth date</div>
+        <div id='#result'class="result">Hi there, enter your birth date.</div>
     </div>
     <footer>
         <h3>
