--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
         </h3>
       </footer>
 
-    <script src="../src/palindrome.js"> </script>
+    <script src="./palindrome.js"> </script>
     
 </body>
 </html>
